[gd_scene load_steps=4 format=3 uid="uid://bikenc7d3ey4e"]

[ext_resource type="Script" path="res://Scenes/ui/battle_over_panel.gd" id="1_1jhka"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ed2cl"]
bg_color = Color(0, 0, 0, 0.34902)

[sub_resource type="LabelSettings" id="LabelSettings_f5xea"]
font_size = 24
outline_size = 10
outline_color = Color(0.711853, 0, 0.0714936, 1)

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ed2cl")
script = ExtResource("1_1jhka")

[node name="WinScreenContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Victory!"
label_settings = SubResource("LabelSettings_f5xea")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="WinScreenContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="RestartButton" type="Button" parent="WinScreenContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Play Again?"

[node name="ResetStatisticsButton" type="Button" parent="WinScreenContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Reset Stats"

[node name="Gap" type="HBoxContainer" parent="WinScreenContainer"]
layout_mode = 2

[node name="RoundsPlayed" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rounds played: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MostPlayedCard" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Most played card: Strike - 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerDamageDealt" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage Dealt: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerDamageTaken" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage Taken: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalEnergyUsed" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Energy Used: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalCardsPlayed" type="Label" parent="WinScreenContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cards played: 0"
horizontal_alignment = 1
vertical_alignment = 1
